logs/pypolibox.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/nltk'...
Listing './lib/python3.5/site-packages/nltk/app'...
Listing './lib/python3.5/site-packages/nltk/ccg'...
Listing './lib/python3.5/site-packages/nltk/chat'...
Listing './lib/python3.5/site-packages/nltk/chunk'...
Listing './lib/python3.5/site-packages/nltk/classify'...
Listing './lib/python3.5/site-packages/nltk/cluster'...
Listing './lib/python3.5/site-packages/nltk/corpus'...
Listing './lib/python3.5/site-packages/nltk/corpus/reader'...
Listing './lib/python3.5/site-packages/nltk/draw'...
Listing './lib/python3.5/site-packages/nltk/inference'...
Listing './lib/python3.5/site-packages/nltk/metrics'...
Listing './lib/python3.5/site-packages/nltk/misc'...
Listing './lib/python3.5/site-packages/nltk/parse'...
Listing './lib/python3.5/site-packages/nltk/sem'...
Listing './lib/python3.5/site-packages/nltk/sentiment'...
Listing './lib/python3.5/site-packages/nltk/stem'...
Listing './lib/python3.5/site-packages/nltk/tag'...
Listing './lib/python3.5/site-packages/nltk/tbl'...
Listing './lib/python3.5/site-packages/nltk/test'...
Listing './lib/python3.5/site-packages/nltk/test/unit'...
Listing './lib/python3.5/site-packages/nltk/test/unit/translate'...
Listing './lib/python3.5/site-packages/nltk/tokenize'...
Listing './lib/python3.5/site-packages/nltk/translate'...
Listing './lib/python3.5/site-packages/nltk/twitter'...
Listing './lib/python3.5/site-packages/nltk-3.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pexpect'...
Listing './lib/python3.5/site-packages/pexpect-4.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pockets'...
Listing './lib/python3.5/site-packages/pockets-0.5.1.dist-info'...
Listing './lib/python3.5/site-packages/ptyprocess'...
Listing './lib/python3.5/site-packages/ptyprocess-0.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pypolibox'...
Listing './lib/python3.5/site-packages/pypolibox/data'...
Compiling './lib/python3.5/site-packages/pypolibox/debug.py'...
***   File "./lib/python3.5/site-packages/pypolibox/debug.py", line 154
    print "generating TextPlans for the query:{0}\n".format(arg)
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pypolibox/grammar'...
Compiling './lib/python3.5/site-packages/pypolibox/hlds.py'...
***   File "./lib/python3.5/site-packages/pypolibox/hlds.py", line 455
    raise Exception, \
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypolibox/lexicalization.py'...
***   File "./lib/python3.5/site-packages/pypolibox/lexicalization.py", line 299
    print "length: ", length
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pypolibox/lexicalize_messageblocks.py'...
***   File "./lib/python3.5/site-packages/pypolibox/lexicalize_messageblocks.py", line 292
    raise NotImplementedError, "The grammar fragment can't handle lastbook non-matches, yet."
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypolibox/pypolibox.py'...
***   File "./lib/python3.5/site-packages/pypolibox/pypolibox.py", line 66
    print "The {0} message block can be realized " \
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pypolibox/realization.py'...
***   File "./lib/python3.5/site-packages/pypolibox/realization.py", line 48
    print "starting tccg as a server with this path: %s" % tccg_binary
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pypolibox/textplan.py'...
***   File "./lib/python3.5/site-packages/pypolibox/textplan.py", line 79
    print "Plan {0}: generated in {1} seconds.\n".format(index,
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypolibox/util.py'...
***   File "./lib/python3.5/site-packages/pypolibox/util.py", line 31
    print "string_or_int: ", string_or_int
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pypolibox-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sphinxcontrib'...
Listing './lib/python3.5/site-packages/sphinxcontrib/napoleon'...
Listing './lib/python3.5/site-packages/sphinxcontrib_napoleon-0.6.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
